- `Container` method `getSymbols` now always returns a list
- added `equals` method to `Symbols` to check if symbols are equal
- bug fix in `SpecialValues$isNA`
- bug fix in `getUELs` for scalar symbols
- bug fix in `Symbol` method `isValid` for symbols containing only NA

GAMS Transfer R v1.6.0
==================
- domain forwarding bug fix when the records are NULL
- describe* method bug fix when the type of symbol is not present in the Container
- added UniverseAlias symbol type for alias to the Universe
- renameUELs methods now have `allowMerge` argument for more data flexibility

GAMS Transfer R v1.4.0
==================
- Breaking: Symbol name uniqueness is now checked case insensitively. For
  example, it is not possible to have two different symbols named
  `symbol` and `Symbol` or `SYMBOL` anymore
- Added a method `Container$getSymbolNames` to return the original symbol names
  for a list of symbol names of any case
- Added a method `Container$hasSymbols` to check if symbol name (case insensitive)
  exists
- Changed `Container$getSymbols`, `Container$removeSymbols`,
  `Container$renameSymbol`, `Container$describe*` and others that use
  `Container$getSymbols` to accept symbol names case insensitively
- New Symbol methods `hasDuplicateRecords`, `countDuplicateRecords`, `findDuplicateRecords`, and `dropDuplicateRecords` to help debug and resolve errors with duplicate records
- New Container methods `hasDuplicateRecords`, `countDuplicateRecords`, and `dropDuplicateRecords` to help find symbols that contain duplicate records that cause the Symbol to be invalid
- Raises an exception if attempting to read a symbol that does not exist in the data source (previously symbol names were silently ignored)
- New tests within `Container$isValid()` method to detect broken container references in symbols and inconsistent symbol naming between the `<Container>$data` field and the symbol objects